deploy/base/jupyter-zib/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-zib
  labels:
    app: jupyter-zib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-zib
  template:
    metadata:
      labels:
        app: jupyter-zib
    spec:
      securityContext:
        runAsUser: 0 # Run as Root to avoid permission issue with volume mount
      containers:
      - name: jupyter-zib
        image: registry.prod.dh.unimaas.nl/docker-health/jupyter-zib:latest
        command: ["start-notebook.sh", "--ServerApp.token=$(APP_TOKEN)"]
        ports:
          - containerPort: 8888
        volumeMounts:
          - name: demo-data
            mountPath: /home/jovyan/data
          - name: notebooks
            mountPath: /home/jovyan/work
          - name: jupyter-logs
            mountPath: /var/log/jupyter
            subPath: jupyter
      volumes:
        - name: demo-data
          hostPath:
            path: /mnt/data
            type: Directory
        - name: notebooks
          persistentVolumeClaim:
              claimName: notebooks-pvc
        - name: jupyter-logs
          persistentVolumeClaim:
            claimName: log-pvc-jupyter
