deploy/base/jupyter-zib/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-zib
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app: jupyter-zib
